--- a/roboss_interface/RobossInterface.csproj
+++ b/roboss_interface/RobossInterface.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -37,6 +38,9 @@
   <ItemGroup>
     <Reference Include="log4net">
       <HintPath>lib\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>lib\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="RoBOSSCommunicator">
       <HintPath>lib\RoBOSSCommunicator.dll</HintPath>
@@ -53,7 +57,8 @@
     <Compile Include="ErlComm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RobotDriver.cs" />
+    <Compile Include="RobossProto.cs" />
+    <Compile Include="RobossDriver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
