--- a/roboss_interface/RobossInterface.csproj
+++ b/roboss_interface/RobossInterface.csproj
@@ -64,6 +64,7 @@
     <None Include="app.config" />
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
