--- a/roboss_interface/log4net.config
+++ b/roboss_interface/log4net.config
@@ -10,7 +10,7 @@
     </layout>
   </appender>
   <root>
-    <level value="DEBUG" />
+    <level value="INFO" />
     <appender-ref ref="RollingFile" />
   </root>
 </log4net>
