--- a/robot_controller/rebar.config
+++ b/robot_controller/rebar.config
@@ -1,7 +1,1 @@
-{deps, [		
-	{protobuffs,".*",
-		{git, "https://github.com/basho/erlang_protobuffs.git",
-			{branch, "master"}
-		}
-	}
-]}.
+{sub_dirs, ["apps"]}.
