state_manager added

--- a/python_controller/log.config
+++ b/python_controller/log.config
@@ -14,7 +14,7 @@ handlers=file
 [handler_file]
 class=FileHandler
 formatter=simple
-args=('out.log',)
+args=('/tmp/out.log',)
 
 [formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
