--- a/python_controller/log.config
+++ b/python_controller/log.config
@@ -2,19 +2,29 @@
 keys=root
 
 [handlers]
-keys=file
+keys=file, socket, datagram
 
 [formatters]
 keys=simple
 
 [logger_root]
 level=INFO
-handlers=file
+handlers=datagram
 
 [handler_file]
 class=FileHandler
 formatter=simple
 args=('/tmp/out.log',)
+
+[handler_socket]
+class=logging.handlers.SocketHandler
+formatter=simple
+args=('localhost', 9020)
+
+[handler_datagram]
+class=logging.handlers.DatagramHandler
+formatter=simple
+args=('localhost', 9021)
 
 [formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
