Kalman filter implemented.

--- a/roboss_interface/log4net.config
+++ b/roboss_interface/log4net.config
@@ -1,6 +1,6 @@
 <log4net>
   <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-    <file value="${ROBOTNAME}.log" />
+    <file value="C:\logs\${ROBOTNAME}.log" />
     <appendToFile value="true" />
     <maximumFileSize value="100KB" />
     <maxSizeRollBackups value="2" />
