Many old changes.

--- a/robot_controller/apps/rebar.config
+++ b/robot_controller/apps/rebar.config
@@ -1,1 +1,1 @@
-{sub_dirs, ["roboss", "client", "roboss_client"]}.
+{sub_dirs, ["roboss", "client", "roboss_client", "amber_client", "state_manager"]}.
