amber_client fixes

--- a/python_controller/log.config
+++ b/python_controller/log.config
@@ -24,7 +24,7 @@ args=('localhost', 9020)
 [handler_datagram]
 class=logging.handlers.DatagramHandler
 formatter=simple
-args=('localhost', 9021)
+args=('sm', 9021)
 
 [formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
